--- a/estilo_general.css
+++ b/estilo_general.css
@@ -333,7 +333,9 @@ body
     position: absolute;
     width: 95%;
     height: 85%;
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
    
 }
 #rojoabajo
